# refimage

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LLM_INTEGRATION_REPORT.md  Makefile  README.md  api_specification.json  generate_api_spec.py  monitor_server.sh  pyproject.toml  real_api_spec.json  start_with_logs.sh  test_api_llm.py  test_basic_storage.py  test_components.py  test_contract_api.py  test_dsl.py  test_llm_integration.py  test_llm_isolated.py  test_simple.py  test_storage_search.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: quality-check.yml
docs/: requirements-spec.md  test-framework-specification.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: RefImageAPI.ts
frontend/src/components/atoms/: LoadingSpinner.css  LoadingSpinner.tsx
frontend/src/components/molecules/: ImageCard.css  ImageCard.tsx
frontend/src/components/organisms/: ImageGrid.css  ImageGrid.tsx
frontend/src/hooks/: useGallery.ts
frontend/src/types/: api.ts
scripts/: quality_check.py
src/refimage/: __init__.py  api.py  config.py  dsl.py  llm.py  main.py  storage.py
src/refimage/api_v2/: __init__.py
src/refimage/models/: __init__.py  clip_model.py  schemas.py  schemas_new.py
src/refimage/search/: __init__.py
tests/: conftest.py  mocks.py  test_api_structure.py  test_basic.py  test_comprehensive_strict.py  test_driver_real.py  test_upload_integration.py
tests/deduplication/: test_api_consolidation.py  test_api_integration.py  test_regression.py  test_storage_dedup.py
